# job-engine

./: .gitignore  LICENSE  README.md  input1a.txt  input3a.txt  parallel-engine.cabal
app/: Main.hs
src/: Lib.hs
