name:                parallel-engine
version:             0.1.0.0
synopsis:            Parallel execution framework
description:         Please see README.md
homepage:            http://github.com/ajnsit/parallel-engine#readme
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           Copyright (C) 2016. Anupam Jain. All Rights Reserved.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , stm >= 2.4
  default-language:    Haskell2010

executable parallel-engine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parallel-engine
                     , containers >= 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/parallel-engine
